# ShanissEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  component.h  component_array.cpp  component_array.h  component_manager.h  entity.cpp  entity.h
src/: ShanissEngine.cpp  ShanissEngine.h  component.h  component_collection.cpp  component_collection.h  component_manager.cpp  component_manager.h  entity.h  oldcomponent.h
src/ecs/: component_collection.cpp  component_manager.h  entity.cpp  entity.h  system.h
test/: bla.cpp
